--- a/AccessReel/AccessReel/ArticlePage.xaml
+++ b/AccessReel/AccessReel/ArticlePage.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AccessReel.ArticlePage"
-             Title="ArticlePage">
+             Title="">
     
     <ScrollView>
         <VerticalStackLayout x:Name="ArticleLayout" HorizontalOptions="Center" WidthRequest="800">
-            <Label x:Name="articleTitle" Text="Article Title" HorizontalOptions="Start" FontAttributes="Bold" LineBreakMode="WordWrap" VerticalOptions="StartAndExpand" WidthRequest="400" Margin="10"/>
+            <Label x:Name="articleTitle" Text="Article Title" HorizontalOptions="Start" FontAttributes="Bold" LineBreakMode="WordWrap" VerticalOptions="StartAndExpand" WidthRequest="400" Margin="10" FontSize="20"/>
             <Image x:Name="banner" Margin="10" WidthRequest="380" Aspect="AspectFit" HorizontalOptions="Start"/>
             <StackLayout x:Name="contentStackLayout" Margin="10" WidthRequest="380" HorizontalOptions="Start">
                 <ContentView x:Name="FilmReviewContainer" />
