--- a/AccessReel/AccessReel/MainPage.xaml
+++ b/AccessReel/AccessReel/MainPage.xaml
@@ -11,7 +11,7 @@
 
             <!-- Template for articles on the home page. Used by Latest News, Latest Interviews, Latest Reviews -->
             <DataTemplate x:Name="DTHomePageArticle" x:Key="TemplateArticle">
-                <VerticalStackLayout Margin="0,10">
+                <VerticalStackLayout Margin="0,10,0,0">
                     <Image Source="{Binding Image}" HeightRequest="100" Aspect="AspectFit" Margin="1">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Tapped="ArticleTapped"/>
@@ -25,8 +25,9 @@
                     <Label Text="{Binding Description}" FontSize="Body" Margin="5" LineBreakMode="WordWrap" />
                     <VerticalStackLayout HorizontalOptions="Start" VerticalOptions="End">
                         <HorizontalStackLayout>
-                            <Image Source="user.png"/>
-                            <Label Text="{Binding Author}" FontSize="Caption" TextColor="DimGray" Margin="5">
+                            <Image Source="user.png" IsVisible="{Binding Author, Converter={StaticResource NotEmptyStringConverter}}"/>
+                            <Label Text="{Binding Author}" FontSize="Caption" TextColor="DimGray" Margin="5" 
+                                   IsVisible="{Binding Author, Converter={StaticResource NotEmptyStringConverter}}">
                                 <Label.GestureRecognizers>
                                     <TapGestureRecognizer Tapped="AuthorTapped"/>
                                 </Label.GestureRecognizers>
@@ -34,8 +35,9 @@
                         </HorizontalStackLayout>
 
                         <HorizontalStackLayout>
-                            <Image Source="clock.png"/>
-                            <Label Text="{Binding FormattedDate}" FontSize="Caption" TextColor="Gray" Margin="5" LineBreakMode="WordWrap"/>
+                            <Image Source="clock.png" IsVisible="{Binding FormattedDate, Converter={StaticResource NotEmptyStringConverter}}"/>
+                            <Label Text="{Binding FormattedDate}" FontSize="Caption" TextColor="Gray" Margin="5" LineBreakMode="WordWrap"
+                                   IsVisible="{Binding FormattedDate, Converter={StaticResource NotEmptyStringConverter}}"/>
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
                 </VerticalStackLayout>
@@ -49,19 +51,19 @@
                         </Image.GestureRecognizers>
                     </Image>
 
-                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="180,14, AutoSize,AutoSize" FontSize="Medium" LineBreakMode="WordWrap" WidthRequest="120">
+                    <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="165,20, AutoSize,AutoSize" FontSize="Medium" LineBreakMode="WordWrap" WidthRequest="120">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Tapped="FilmTapped"/>
                         </Label.GestureRecognizers>
                     </Label>
 
-                    <AbsoluteLayout Margin="10" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="250,55, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="0" x:Name="CriticReviewScore" AbsoluteLayout.LayoutBounds="320,75, AutoSize,AutoSize">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" AbsoluteLayout.LayoutBounds="0,0" />
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.3" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
-                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="6,65" FontAttributes="Bold"/>
+                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds=".5,0.5" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" TextColor="White" FontAttributes="Bold" />
+                        <Label Text="CRITIC" AbsoluteLayout.LayoutBounds="-52,22" FontAttributes="Bold"/>
                     </AbsoluteLayout>
 
-                    <AbsoluteLayout Margin="10" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="200,115, AutoSize,AutoSize">
+                    <AbsoluteLayout Margin="0" x:Name="UserReviewScore" AbsoluteLayout.LayoutBounds="260,115, AutoSize,AutoSize" >
                         <RoundRectangle WidthRequest="40" HeightRequest="23" Fill="#00d1e4" CornerRadius="5" AbsoluteLayout.LayoutBounds="70,25" />
                         <Label Text="{Binding MemberReviewScore}" AbsoluteLayout.LayoutBounds="0.875,0.90" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="15" TextColor="white" FontAttributes="Bold" />
                         <Label Text="Members" AbsoluteLayout.LayoutBounds="0,25" />
@@ -76,7 +78,7 @@
             Padding="30,0"
             Spacing="25">
             <!-- Top Carousel -->
-            <CarouselView x:Name="CVImageheader" IndicatorView="IImageHeader" HorizontalOptions="FillAndExpand" >
+            <CarouselView x:Name="CVImageheader" IndicatorView="IImageHeader" HorizontalOptions="FillAndExpand" Margin="-10,0,0,-10">
                 <CarouselView.ItemTemplate>
                     <DataTemplate>
                         <Frame HorizontalOptions="Center" BackgroundColor="White" BorderColor="White" MaximumHeightRequest="120" Padding="0" CornerRadius="0">
@@ -111,23 +113,23 @@
                     </DataTemplate>
                 </CarouselView.ItemTemplate>
                 <CarouselView.ItemsLayout>
-                    <LinearItemsLayout Orientation="Horizontal" SnapPointsType="None" SnapPointsAlignment="Start" ItemSpacing="0"/>
+                    <LinearItemsLayout Orientation="Horizontal" SnapPointsType="Mandatory" SnapPointsAlignment="Center" ItemSpacing="0"/>
                 </CarouselView.ItemsLayout>
             </CarouselView>
-            <IndicatorView x:Name="IImageHeader" HorizontalOptions="Center"/>
+            <IndicatorView x:Name="IImageHeader" HorizontalOptions="Center" Margin="0,0,0,0"/>
             <!-- Latest News-->
-            <VerticalStackLayout BackgroundColor="#f8f8f8">
-                <Label x:Name="LblLatestNews" Text="Latest News"
+            <VerticalStackLayout BackgroundColor="#f8f8f8" Margin="-20,0,-20,-20">
+                <Label x:Name="LblLatestNews" Text=" Latest News"
                        BackgroundColor="#68ccde" Style="{StaticResource HomePageHeaders}"/>
-                <CollectionView x:Name="CVNews" ItemTemplate="{StaticResource TemplateArticle}" >
+                <CollectionView x:Name="CVNews" ItemTemplate="{StaticResource TemplateArticle}">
                     <CollectionView.ItemsLayout>
-                        <GridItemsLayout Orientation="Vertical" Span="2"/>
+                        <GridItemsLayout Orientation="Vertical" Span="2" HorizontalItemSpacing="1"/>
                     </CollectionView.ItemsLayout>
                 </CollectionView>
             </VerticalStackLayout>
             <!-- Latest Interviews -->
-            <VerticalStackLayout BackgroundColor="#f8f8f8">
-                <Label x:Name="LblLatestInterviews" Text="Latest Interviews"
+            <VerticalStackLayout BackgroundColor="#f8f8f8" Margin="-20,5,-20,0">
+                <Label x:Name="LblLatestInterviews" Text=" Latest Interviews"
                        BackgroundColor="Black" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVInterviews" ItemTemplate="{StaticResource TemplateArticle}">
                     <CollectionView.ItemsLayout>
@@ -136,8 +138,8 @@
                 </CollectionView>
             </VerticalStackLayout>
             <!-- Latest Reviews -->
-            <VerticalStackLayout BackgroundColor="#f8f8f8">
-                <Label x:Name="LblLatestReviews" Text="Latest Reviews" 
+            <VerticalStackLayout BackgroundColor="#f8f8f8" Margin="-20,-5,-20,0">
+                <Label x:Name="LblLatestReviews" Text=" Latest Reviews" 
                        BackgroundColor="#66ccdc" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVReviews" ItemTemplate="{StaticResource TemplateArticle}">
                     <CollectionView.ItemsLayout>
@@ -146,18 +148,18 @@
                 </CollectionView>
             </VerticalStackLayout>
             <!-- Top User Rated Reviews -->
-            <VerticalStackLayout BackgroundColor="#f8f8f8">
-                <Label x:Name="LblTopUserReviews" Text="Top User Rated Reviews" LineBreakMode="WordWrap"
-                       Margin="0,0,0,50"
+            <VerticalStackLayout BackgroundColor="#f8f8f8" Margin="-20,-10,-20,0">
+                <Label x:Name="LblTopUserReviews" Text=" Top User Rated Reviews" LineBreakMode="WordWrap"
+                       Margin="0,0,0,0"
                        BackgroundColor="#5192e3" Style="{StaticResource HomePageHeaders}"/>
                 <CollectionView x:Name="CVUserReviews" ItemTemplate="{StaticResource TemplateUserReviews}">
 
                 </CollectionView>
             </VerticalStackLayout>
             <!-- New Trailers -->
-            <VerticalStackLayout BackgroundColor="#f8f8f8">
-                <Label x:Name="LblTrailers" Text="New Trailers" 
-                       BackgroundColor="#e17132" Style="{StaticResource HomePageHeaders}"/>
+            <VerticalStackLayout BackgroundColor="#f8f8f8" Margin="-20,0,-20,20">
+                <Label x:Name="LblTrailers" Text=" New Trailers" 
+                       BackgroundColor="#e17132" Style="{StaticResource HomePageHeaders}" Margin="0,0,0,10"/>
 
                 <CarouselView x:Name="CVTrailers" IndicatorView="ITrailers" HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" >
                     <CarouselView.ItemTemplate>
